# EcoNode-25

./: .gitignore  README.md  pyproject.toml
configs/scenarios/: baseline.yaml  green_first.yaml  high_density.yaml  transit_first.yaml
econode25_dashboard/: app.py
econode25_map_viewer/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
econode25_map_viewer/src/: App.tsx  main.tsx  styles.css
econode25_map_viewer/src/config/: defaults.ts  schema.ts
econode25_map_viewer/src/data/: categories.ts  kdTree.ts  loader.ts  projection.ts
econode25_map_viewer/src/graph/: adjacency.ts  dijkstra.ts  travelTime.ts
econode25_map_viewer/src/layers/: buildingsLayer.ts  facilitiesLayer.ts  parcelsLayer.ts  roadsLayer.ts  transitLayer.ts
econode25_map_viewer/src/ui/: ControlPanel.tsx  Inspector.tsx  Legend.tsx  Toolbar.tsx  TravelTimeTable.tsx
econode25_map_viewer/src/utils/: colors.ts  downloadZip.ts  icons.ts  screenshot.ts
exports/20260303_033430_baseline/data_localxy/: boundary_local.json
exports/20260303_033430_baseline/data_wgs84/: boundary.geojson  buildings.geojson  roads.geojson
exports/20260303_033430_baseline/metrics/: accessibility_summary.csv  accessibility_summary.json  sustainability_summary.csv  travel_time_stats.csv  underserved_zones.geojson
exports/20260303_033430_baseline/network/: adjacency.json  graph_summary.json
src/econode25/: __init__.py  analytics.py  categories.py  config.py  exporters.py  generator.py  infographic.py  projection.py  run_all.py  scenarios.py
tests/: test_generator.py
(+70 files in other folders)
